--- a/web/hong/pages/home.html
+++ b/web/hong/pages/home.html
@@ -34,9 +34,24 @@
         </nav>
     </div>
 
-    <div class="search">
-
+    <div class="col-lg-6 col-lg-offset-3">
+        <div class="input-group">
+            <input type="text" class="form-control">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">搜索</button>
+            </span>
+        </div>
+        <ul class="hot-query">
+            <li>针织衫</li>
+            <li>连衣裙</li>
+            <li>四件套</li>
+            <li>摄像头</li>
+            <li>手机</li>
+            <li>电脑</li>
+            <li>牛奶</li>
+        </ul>
     </div>
+
 
     <div class="main">
         <div class="nes">
