--- a/web/hong/pages/home.html
+++ b/web/hong/pages/home.html
@@ -28,7 +28,7 @@
                         <li><a href="amusement.html">娱乐</a></li>
                     </ul>
                 </li>
-                <li><a href="#">我的简历</a></li>
+                <li><a href="#">个人说明</a></li>
                 <li><a href="#">其他</a></li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
 
     <div class="col-lg-6 col-lg-offset-3">
         <div class="input-group">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" value="请输入关键词">
             <span class="input-group-btn">
                 <button class="btn btn-default" type="button">搜索</button>
             </span>
@@ -52,7 +52,6 @@
         </ul>
     </div>
 
-
     <div class="main">
         <div class="nes">
 
@@ -65,36 +64,19 @@
         <div class="clock"></div>
     </div>
 
-    <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare">
-        <span class="bds_more" style="color:#FFFFFF;padding-top:0">分享到：</span>
-        <a class="bds_fbook"></a>
-        <a class="bds_twi"></a>
-        <a class="bds_ms"></a>
-        <a class="bds_linkedin"></a>
-        <a class="bds_tsina"></a>
-        <a class="bds_tqq"></a>
-        <a class="bds_qzone"></a>
-        <a class="bds_tieba"></a>
-        <a class="bds_kaixin001"></a>
-        <a class="bds_douban"></a>
-        <a class="bds_renren"></a>
-        <a class="shareCount"></a>
-    </div>
-    <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=3910114"></script>
-    <script type="text/javascript" id="bdshell_js"></script>
-    <script type="text/javascript">
-        document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date() / 3600000)
-    </script>
+    <!--<div class="footer">-->
+        <!--<div class="inbk">-->
+            <!--Copyright © 2018 All Rights Reserved. Min.Hong 粤ICP备18140437号-1-->
+        <!--</div>-->
+    <!--</div>-->
+    <div class="copyright">
 
-    <div class="footer">
-        <div class="inbk">
-            Copyright © 2018 All Rights Reserved. Min.Hong
-        </div>
     </div>
-
 </body>
 
-<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/jquery-3.3.1.js"></script>
+<script src="../js/bootstrap.js"></script>
+<script src="../js/home.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
 </html>
